# lightning-node-db

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  main.py
src/api/: __init__.py  lightning_client.py  node_service.py
src/cli/: LND_chanDB.py  __init__.py
src/db/: __init__.py  database.py  models.py
src/utils/: __init__.py  config.py
tests/: test_database.py  test_node_service.py
